@@ -8,7 +8,8 @@
 package org.dspace.app.rest;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
+import javax.annotation.PostConstruct;
 import javax.servlet.http.HttpServletResponse;
 
 import org.apache.commons.lang3.StringUtils;
@@ -16,7 +17,6 @@ import org.dspace.app.rest.model.AuthnRest;
 import org.dspace.services.ConfigurationService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.hateoas.Link;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -25,26 +25,25 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 /**
- * Rest controller that handles redirect after OIDC authentication succeded
+ * Rest controller that handles redirect after OIDC authentication succeded.
  *
- * @author Pasquale Cavallo (pasquale dot cavallo at 4science dot it)
+ * @author Luca Giamminonni (luca.giamminonni at 4science.it)
  */
 @RestController
 @RequestMapping(value = "/api/" + AuthnRest.CATEGORY + "/oidc")
-public class OidcRestController implements InitializingBean {
+public class OidcRestController {
 
     private static final Logger log = LoggerFactory.getLogger(OidcRestController.class);
 
     @Autowired
-    ConfigurationService configurationService;
+    private ConfigurationService configurationService;
 
     @Autowired
-    DiscoverableEndpointsService discoverableEndpointsService;
+    private DiscoverableEndpointsService discoverableEndpointsService;
 
-    @Override
+    @PostConstruct
     public void afterPropertiesSet() {
-        discoverableEndpointsService
-            .register(this, Arrays.asList(new Link("/api/" + AuthnRest.CATEGORY, "oidc")));
+        discoverableEndpointsService.register(this, List.of(new Link("/api/" + AuthnRest.CATEGORY, "oidc")));
     }
 
     @RequestMapping(method = RequestMethod.GET)
